--- a/net_script/t5-base-4gpu.yaml
+++ b/net_script/t5-base-4gpu.yaml
@@ -28,13 +28,22 @@ spec:
             kubernetes.io/hostname: xsailor-master
           containers:
           - name: pytorch
-            image: potato4332/t5-fsdp:0.0.x-cache
-            imagePullPolicy: IfNotPresent
-            command:
-              - "/bin/bash"
+            image: potato4332/t5-fsdp:0.0.x-test
+            imagePullPolicy: Always
+            command: ["/bin/sh", "-c"]
             args:
-              - "-c"
-              - "nsys profile --duration=300 -o /result/t5-base-4gpu-master python /workspace/t5-base.py --dataset_url 'https://public-nlp-datasets.s3.us-west-2.amazonaws.com/wikihowAll.csv' --model_name 't5-base' --num_samples 1500 --input_length 512 --output_length 150 --batch_size 5 --num_epochs 1 --learning_rate 0.002 --max_steps 10"
+              - cd /workspace/NVML;
+                make;
+                JOB=`python /workspace/job_name.py`;
+                mkdir -p /result/t5_base_4gpu;
+                top -d 0.1 -b | grep t5 > /result/t5_base_4gpu/t5_base_4gpu_${JOB}_cpu.txt &
+                echo "t5_base_4gpu" > /workspace/model.txt;
+                STARTTIME=`date "+%H:%M:%S.%N"`;
+                echo "$STARTTIME" > /result/t5_base_4gpu/t5_base_4gpu_${JOB}_start_time.txt;
+
+                python /workspace/t5-base.py --dataset_url 'https://public-nlp-datasets.s3.us-west-2.amazonaws.com/wikihowAll.csv' --model_name 't5-base' --num_samples 1500 --input_length 512 --output_length 150 --batch_size 5 --num_epochs 1 --learning_rate 0.002 --max_steps 10;
+                ENDTIME=`date "+%H:%M:%S.%N"`;
+                echo "$ENDTIME" > /result/t5_base_4gpu/t5_base_4gpu_${JOB}_end_time.txt;
             env:
             - name: POD_NAME
               valueFrom:
@@ -45,7 +54,7 @@ spec:
             - name: RANK
               value: "0"  # 마스터의 글로벌 랭크
             - name: WORLD_SIZE
-              value: "4"  # 전체 프로세스 수
+              value: "8"  # 전체 프로세스 수
             - name: MASTER_ADDR
               value: "fsdp-t5-training-master-0"  # 마스터 Pod 이름
             - name: MASTER_PORT
@@ -75,6 +84,7 @@ spec:
             emptyDir:
               medium: Memory
               sizeLimit: "8G"
+              # nsys profile --duration=300 -o /result/t5-base-4gpu-master
     Worker:
       replicas: 3
       restartPolicy: Never
@@ -84,13 +94,20 @@ spec:
             kubernetes.io/hostname: xsailor-master
           containers:
           - name: pytorch
-            image: potato4332/t5-fsdp:0.0.x-cache
-            imagePullPolicy: IfNotPresent
-            command:
-              - "/bin/bash"
+            image: potato4332/t5-fsdp:0.0.x-test
+            imagePullPolicy: Always
+            command: ["/bin/sh", "-c"]
             args:
-              - "-c"
-              - "nsys profile --duration=300 -o /result/t5-base-4gpu-worker python /workspace/t5-base.py --dataset_url 'https://public-nlp-datasets.s3.us-west-2.amazonaws.com/wikihowAll.csv' --model_name 't5-base' --num_samples 1500 --input_length 512 --output_length 150 --batch_size 5 --num_epochs 1 --learning_rate 0.002 --max_steps 10"
+              - JOB=`python /workspace/job_name.py`;
+                mkdir -p /result/t5_base_4gpu;
+                top -d 0.1 -b | grep t5 > /result/t5_base_4gpu/t5_base_4gpu_${JOB}_cpu.txt &
+                echo "t5_base_4gpu" > /workspace/model.txt;
+                STARTTIME=`date "+%H:%M:%S.%N"`;
+                echo "$STARTTIME" > /result/t5_base_4gpu/t5_base_4gpu_${JOB}_start_time.txt;
+
+                python /workspace/t5-base.py --dataset_url 'https://public-nlp-datasets.s3.us-west-2.amazonaws.com/wikihowAll.csv' --model_name 't5-base' --num_samples 1500 --input_length 512 --output_length 150 --batch_size 5 --num_epochs 1 --learning_rate 0.002 --max_steps 10;
+                ENDTIME=`date "+%H:%M:%S.%N"`;
+                echo "$ENDTIME" > /result/t5_base_4gpu/t5_base_4gpu_${JOB}_end_time.txt;
             env:
             - name: POD_NAME
               valueFrom:
@@ -105,7 +122,7 @@ spec:
                 fieldRef:
                   fieldPath: metadata.annotations['rank']
             - name: WORLD_SIZE
-              value: "4"  # 전체 프로세스 수
+              value: "8"  # 전체 프로세스 수
             - name: MASTER_ADDR
               value: "fsdp-t5-training-master-0"  # 마스터 Pod 이름
             - name: MASTER_PORT
