--- a/nsys_script/id2-t5-base-2gpu.yaml
+++ b/nsys_script/id2-t5-base-2gpu.yaml
@@ -33,15 +33,15 @@ spec:
             command: ["/bin/sh", "-c"]
             args:
               - JOB=`python /workspace/job_name.py`;
-                mkdir -p /result/t5_base_2gpu;
-                top -d 0.1 -b | grep t5 > /result/t5_base_2gpu/t5_base_2gpu_${JOB}_cpu.txt &
-                echo "t5_base_2gpu" > /workspace/model.txt;
+                mkdir -p /result/nsys_t5_base_2gpu;
+                top -d 0.1 -b | grep t5 > /result/nsys_t5_base_2gpu/nsys_t5_base_2gpu_${JOB}_cpu.txt &
+                echo "nsys_t5_base_2gpu" > /workspace/model.txt;
                 STARTTIME=`date "+%H:%M:%S.%N"`;
-                echo "$STARTTIME" > /result/t5_base_2gpu/t5_base_2gpu_${JOB}_start_time.txt;
+                echo "$STARTTIME" > /result/nsys_t5_base_2gpu/nsys_t5_base_2gpu_${JOB}_start_time.txt;
 
-                python /workspace/t5-base.py --dataset_url 'https://public-nlp-datasets.s3.us-west-2.amazonaws.com/wikihowAll.csv' --model_name 't5-base' --num_samples 1500 --input_length 512 --output_length 150 --batch_size 5 --num_epochs 1 --learning_rate 0.002 --max_steps 10;
+                nsys profile --duration=300 -o /result/nsys_t5_base_2gpu_${JOB} python /workspace/t5-base.py --dataset_url 'https://public-nlp-datasets.s3.us-west-2.amazonaws.com/wikihowAll.csv' --model_name 't5-base' --num_samples 1500 --input_length 512 --output_length 150 --batch_size 5 --num_epochs 1 --learning_rate 0.002 --max_steps 10;
                 ENDTIME=`date "+%H:%M:%S.%N"`;
-                echo "$ENDTIME" > /result/t5_base_2gpu/t5_base_2gpu_${JOB}_end_time.txt;
+                echo "$ENDTIME" > /result/nsys_t5_base_2gpu/nsys_t5_base_2gpu_${JOB}_end_time.txt;
             env:
             - name: POD_NAME
               valueFrom:
@@ -96,15 +96,15 @@ spec:
             command: ["/bin/sh", "-c"]
             args:
               - JOB=`python /workspace/job_name.py`;
-                mkdir -p /result/t5_base_2gpu;
-                top -d 0.1 -b | grep t5 > /result/t5_base_2gpu/t5_base_2gpu_${JOB}_cpu.txt &
-                echo "t5_base_2gpu" > /workspace/model.txt;
+                mkdir -p /result/nsys_t5_base_2gpu;
+                top -d 0.1 -b | grep t5 > /result/nsys_t5_base_2gpu/nsys_t5_base_2gpu_${JOB}_cpu.txt &
+                echo "nsys_t5_base_2gpu" > /workspace/model.txt;
                 STARTTIME=`date "+%H:%M:%S.%N"`;
-                echo "$STARTTIME" > /result/t5_base_2gpu/t5_base_2gpu_${JOB}_start_time.txt;
+                echo "$STARTTIME" > /result/nsys_t5_base_2gpu/nsys_t5_base_2gpu_${JOB}_start_time.txt;
 
-                python /workspace/t5-base.py --dataset_url 'https://public-nlp-datasets.s3.us-west-2.amazonaws.com/wikihowAll.csv' --model_name 't5-base' --num_samples 1500 --input_length 512 --output_length 150 --batch_size 5 --num_epochs 1 --learning_rate 0.002 --max_steps 10;
+                nsys profile --duration=300 -o /result/nsys_t5_base_2gpu_${JOB} python /workspace/t5-base.py --dataset_url 'https://public-nlp-datasets.s3.us-west-2.amazonaws.com/wikihowAll.csv' --model_name 't5-base' --num_samples 1500 --input_length 512 --output_length 150 --batch_size 5 --num_epochs 1 --learning_rate 0.002 --max_steps 10;
                 ENDTIME=`date "+%H:%M:%S.%N"`;
-                echo "$ENDTIME" > /result/t5_base_2gpu/t5_base_2gpu_${JOB}_end_time.txt;
+                echo "$ENDTIME" > /result/nsys_t5_base_2gpu/nsys_t5_base_2gpu_${JOB}_end_time.txt;
             env:
             - name: POD_NAME
               valueFrom:
