--- a/net_script/id11-t5-3b-4gpu.yaml
+++ b/net_script/id11-t5-3b-4gpu.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: fsdp-t5-training-master
+  name: id11-fsdp-t5-training-master
 spec:
   selector:
-    job-name: fsdp-t5-training-master
+    job-name: id11-fsdp-t5-training-master
   ports:
     - protocol: TCP
       port: 29500  # PyTorch 기본 포트
@@ -14,7 +14,7 @@ spec:
 apiVersion: kubeflow.org/v1
 kind: PyTorchJob
 metadata:
-  name: fsdp-t5-training
+  name: id11-fsdp-t5-training
 spec:
   runPolicy:
     cleanPodPolicy: None
